--- a/RecipeWebsite/MyRecipe.css
+++ b/RecipeWebsite/MyRecipe.css
@@ -29,7 +29,7 @@ header ul{
 	padding: 0;
 }
 
-header li{
+li{
 	display: inline;
 	padding: 10px;
 	font-size: 16px;
@@ -75,3 +75,114 @@ header .right ul{
 /*===================================================================
 =====================================================================
 ===================================================================*/
+
+/**
+ * For modern browsers
+ * 1. The space content is one way to avoid an Opera bug when the
+ *    contenteditable attribute is included anywhere else in the document.
+ *    Otherwise it causes space to appear at the top and bottom of elements
+ *    that are clearfixed.
+ * 2. The use of `table` rather than `block` is only necessary if using
+ *    `:before` to contain the top-margins of child elements.
+ */
+.cf:before,
+.cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.cf:after {
+    clear: both;
+}
+
+/**
+ * For IE 6/7 only
+ * Include this rule to trigger hasLayout and contain floats.
+ */
+.cf {
+    *zoom: 1;
+}
+
+#main{
+	background-image: url('img/dishes.jpg');
+	height: 438px;
+}
+
+#main p{
+	margin: 0;
+	padding-top: 20px;
+	color: #b46363;
+	text-align: center;
+	font-size: 30px;
+}
+
+form{
+	padding-top: 30px;
+	text-align: center;
+}
+
+#email{
+	width: 220px;
+	height: 25px;
+	border-radius: 5px;
+	padding: 0;
+	margin-right: 10px;
+}
+
+#click{
+	height: 25px;
+	width: 100px;
+	border-radius: 5px;
+	padding: 0;
+}
+
+.box{
+	position: relative;
+	float: left;
+	margin: 20px 0px;
+}
+
+.box img{
+	position: relative;
+	z-index: 1;
+	margin-left: 15px;
+}
+
+.box p{
+	position: absolute;
+	width: 100%;
+	top: 12px;
+	z-index: 2;
+	text-align: center;
+	font-size: 24px;
+	margin-left: 15px;
+}
+
+.middle p{
+	color: white;
+}
+
+
+/* 							   Footer 								*/
+/*===================================================================
+=====================================================================
+===================================================================*/
+footer{
+	background-color: #f2efdf;
+	text-align: center;
+	padding-top: 15px;
+	height: 130px;
+}
+
+footer img{
+	display: block;
+	margin: 0 auto;
+}
+
+footer ul li{
+	border-right: 1px solid #373535;
+}
+
+footer ul li:last-child{
+	border-right: none;
+}
